# Graphics_20

./: :WQ  Builder.cpp  Builder.h  CMakeLists.txt  Camera.h  DataDialog.cpp  DataDialog.h  GLWidget.cpp  GLWidget.h  LICENSE  Light.cpp  Light.h  MainWindow.cpp  MainWindow.cpp.autosave  MainWindow.h  Material.cpp  Material.h  README.md  VisualDataGPU.pro  VisualDataGPU.pro.user.a2b460a.22  VisualDataGPU.pro.user.b59f78a.22  dataDialog.ui  datadialog.cpp  datadialog.h  datadialog.ui  mainwindow.ui  resources.qrc
TG/: TG.cpp  Translate.cpp  Translate.h
animations/: Animation.cpp
colormaps/: ColorMapStatic.h
dataray-p1/include/: Cara.h  Circle.h  ColorMap.h  Lambertian.h  Light.h  MaterialTextura.h  Metall.h  RenderFactory.h  SceneFactoryData.h  SceneFactoryVirtual.h  Translate.h
dataray-p1/resources/: dadesEuropa.txt  data0_1_v2.txt  spheres4.txt
dataray-p1/src/: Animation.cpp  Camera.cpp  Circle.cpp  DataReader.cpp  FittedPlane.cpp  Lambertian.cpp  Light.cpp  Metall.cpp  ReadFile.cpp  RenderFactory.cpp  SceneFactory.cpp  Sphere.cpp  Texture.cpp  Translate.cpp
glm/gtx/: fast_exponential.inl
include/: Animation.h  BoundaryObject.h  Camera.h  Circle.h  Controller.h  Cylinder.h  DataReader.h  FittedPlane.h  Hitable.h  Mate.h  Material.h  MaterialTextura.h  Object.h  ObjectFactory.h  Plane.h  RayTracingGLU.h  RayTracingPPM.h  RayTracingTemps.h  ReadFile.h  Render.h  Scale.h  Scene.h  SceneFactory.h  SceneFactoryVirtual.h  SceneReader.h  Sphere.h  Transparent.h  Triangle.h
objects/: Object.cpp  Object.h  cara.cpp  cara.h  plane.cpp  plane.h
resources/: dadesEuropa.txt  data0.txt  data0_1.txt  dataBCN.txt  dataBCNPuntosVerdes.txt  dataBCNZoom.txt  fGoraudShader.glsl  fGoraudShaderTex.glsl  fPhongShader.glsl  fPhongShaderIndirectTex.glsl  fPhongShaderTex.glsl  fToonShading.glsl  spheres.txt  spheres2.txt  spheres3.txt  vGoraudShader.glsl  vGoraudShaderTex.glsl  vPhongShader.glsl  vPhongShaderIndirectTex.glsl  vPhongShaderTex.glsl  vToonShading.glsl  vshader1.glsl
resources/colormaps/: hept32.gpl
resources/data/: data0.txt
scenes/: DataReader.cpp  DataReader.h  Scene.cpp  Scene.h  SceneFactory.h  SceneFactoryData.cpp  SceneFactoryData.h  SceneFactoryVirtual.cpp  SceneFactoryVirtual.h  SceneReader.cpp  SceneReader.h
src/: ._BoundaryObject.cpp  BoundaryObject.cpp  Circle.cpp  ColorMapStatic.cpp  Controller.cpp  Cylinder.cpp  DataReader.cpp  FittedPlane.cpp  Lambertian.cpp  Main.cpp  Mate.cpp  Material.cpp  MaterialTextura.cpp  Metall.cpp  Object.cpp  ObjectFactory.cpp  Plane.cpp  RayTracingGLU.cpp  RayTracingPPM.cpp  RayTracingTemps.cpp  Render.cpp  RenderFactory.cpp  Scale.cpp  Scene.cpp  SceneFactoryData.cpp  SceneFactoryVirtual.cpp  SceneReader.cpp  Sphere.cpp  Texture.cpp  Transparent.cpp  Triangle.cpp
visualdatagpu-p2/: Camera.cpp  Main.cpp  MainWindow.cpp  datadialog.ui
visualdatagpu-p2/TG/: TG.h
visualdatagpu-p2/animations/: Animation.h
visualdatagpu-p2/colormaps/: ColorMap.h
visualdatagpu-p2/objects/: plane.cpp
visualdatagpu-p2/resources/: fPhongShader.glsl  fshader1.glsl  vPhongShader.glsl
visualdatagpu-p2/resources/colormaps/: colorMap2.gpl  hept32.gpl
visualdatagpu-p2/scenes/: DataReader.cpp  SceneFactoryVirtual.h
