cmake_minimum_required(VERSION 3.14)
project(RayData)

set(CMAKE_CXX_STANDARD 14)
# Find includes in the build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Turn on automatic invocation of the MOC, UIC & RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
# Add a compiler flag
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

# Make this a GUI application on Windows
if(WIN32)
    set(CMAKE_WIN32_EXECUTABLE ON)
endif()

# Tell cmake where Qt is located

# aules
set (Qt5_DIR /opt/Qt/5.9.1/gcc_64/lib/cmake/Qt5/)
# mac:
#set(QT5_DIR "/Users/anna/qt/5.10.0/clang_64/lib/cmake/Qt5")
# ubuntu:
#set(Qt5_DIR "/opt/Qt/5.12.3/gcc_64/lib/cmake/Qt5/")

# Find the QtWidgets library
find_package(Qt5 REQUIRED COMPONENTS Widgets)
qt5_add_resources(Res_SRC "resources.qrc")


include_directories(.)
include_directories(glm)
include_directories(glm/core)
include_directories(glm/gtc)
include_directories(glm/gtx)
include_directories(glm/virtrev)
include_directories(include)

# Find gl and glut library: only if GLConfig.cmake or gl-config.cmake is present in the system
# find_package(GL REQUIRED)
# find_package(GLUT REQUIRED)

# Find gl and glut library: ubuntu
set (OPENGL_INCLUDE_DIRS /usr/include)
set (GLUT_INCLUDE_DIRS /usr/include)

# settings de GL en el MAC
#set (OPENGL_INCLUDE_DIRS /opt/X11/include)
#set (GLUT_INCLUDE_DIRS /opt/X11/include)

include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})



add_executable(RayData
        glm/core/_detail.hpp
        glm/core/_fixes.hpp
        glm/core/_swizzle.hpp
        glm/core/_swizzle_func.hpp
        glm/core/_vectorize.hpp
        glm/core/func_common.hpp
        glm/core/func_common.inl
        glm/core/func_exponential.hpp
        glm/core/func_exponential.inl
        glm/core/func_geometric.hpp
        glm/core/func_geometric.inl
        glm/core/func_integer.hpp
        glm/core/func_integer.inl
        glm/core/func_matrix.hpp
        glm/core/func_matrix.inl
        glm/core/func_noise.hpp
        glm/core/func_noise.inl
        glm/core/func_packing.hpp
        glm/core/func_packing.inl
        glm/core/func_trigonometric.hpp
        glm/core/func_trigonometric.inl
        glm/core/func_vector_relational.hpp
        glm/core/func_vector_relational.inl
        glm/core/hint.hpp
        glm/core/intrinsic_common.hpp
        glm/core/intrinsic_common.inl
        glm/core/intrinsic_exponential.hpp
        glm/core/intrinsic_exponential.inl
        glm/core/intrinsic_geometric.hpp
        glm/core/intrinsic_geometric.inl
        glm/core/intrinsic_matrix.hpp
        glm/core/intrinsic_matrix.inl
        glm/core/intrinsic_trigonometric.hpp
        glm/core/intrinsic_trigonometric.inl
        glm/core/intrinsic_vector_relational.hpp
        glm/core/intrinsic_vector_relational.inl
        glm/core/setup.hpp
        glm/core/type.hpp
        glm/core/type_float.hpp
        glm/core/type_gentype.hpp
        glm/core/type_gentype.inl
        glm/core/type_half.hpp
        glm/core/type_half.inl
        glm/core/type_int.hpp
        glm/core/type_mat.hpp
        glm/core/type_mat.inl
        glm/core/type_mat2x2.hpp
        glm/core/type_mat2x2.inl
        glm/core/type_mat2x3.hpp
        glm/core/type_mat2x3.inl
        glm/core/type_mat2x4.hpp
        glm/core/type_mat2x4.inl
        glm/core/type_mat3x2.hpp
        glm/core/type_mat3x2.inl
        glm/core/type_mat3x3.hpp
        glm/core/type_mat3x3.inl
        glm/core/type_mat3x4.hpp
        glm/core/type_mat3x4.inl
        glm/core/type_mat4x2.hpp
        glm/core/type_mat4x2.inl
        glm/core/type_mat4x3.hpp
        glm/core/type_mat4x3.inl
        glm/core/type_mat4x4.hpp
        glm/core/type_mat4x4.inl
        glm/core/type_size.hpp
        glm/core/type_vec.hpp
        glm/core/type_vec.inl
        glm/core/type_vec1.hpp
        glm/core/type_vec1.inl
        glm/core/type_vec2.hpp
        glm/core/type_vec2.inl
        glm/core/type_vec3.hpp
        glm/core/type_vec3.inl
        glm/core/type_vec4.hpp
        glm/core/type_vec4.inl
        glm/gtc/constants.hpp
        glm/gtc/constants.inl
        glm/gtc/epsilon.hpp
        glm/gtc/epsilon.inl
        glm/gtc/half_float.hpp
        glm/gtc/half_float.inl
        glm/gtc/matrix_access.hpp
        glm/gtc/matrix_access.inl
        glm/gtc/matrix_integer.hpp
        glm/gtc/matrix_inverse.hpp
        glm/gtc/matrix_inverse.inl
        glm/gtc/matrix_transform.hpp
        glm/gtc/matrix_transform.inl
        glm/gtc/noise.hpp
        glm/gtc/noise.inl
        glm/gtc/quaternion.hpp
        glm/gtc/quaternion.inl
        glm/gtc/random.hpp
        glm/gtc/random.inl
        glm/gtc/reciprocal.hpp
        glm/gtc/reciprocal.inl
        glm/gtc/swizzle.hpp
        glm/gtc/swizzle.inl
        glm/gtc/type_precision.hpp
        glm/gtc/type_precision.inl
        glm/gtc/type_ptr.hpp
        glm/gtc/type_ptr.inl
        glm/gtc/ulp.hpp
        glm/gtc/ulp.inl
        glm/gtx/associated_min_max.hpp
        glm/gtx/associated_min_max.inl
        glm/gtx/bit.hpp
        glm/gtx/bit.inl
        glm/gtx/closest_point.hpp
        glm/gtx/closest_point.inl
        glm/gtx/color_cast.hpp
        glm/gtx/color_cast.inl
        glm/gtx/color_space.hpp
        glm/gtx/color_space.inl
        glm/gtx/color_space_YCoCg.hpp
        glm/gtx/color_space_YCoCg.inl
        glm/gtx/compatibility.hpp
        glm/gtx/compatibility.inl
        glm/gtx/component_wise.hpp
        glm/gtx/component_wise.inl
        glm/gtx/constants.hpp
        glm/gtx/epsilon.hpp
        glm/gtx/euler_angles.hpp
        glm/gtx/euler_angles.inl
        glm/gtx/extend.hpp
        glm/gtx/extend.inl
        glm/gtx/extented_min_max.hpp
        glm/gtx/extented_min_max.inl
        glm/gtx/fast_exponential.hpp
        glm/gtx/fast_exponential.inl
        glm/gtx/fast_square_root.hpp
        glm/gtx/fast_square_root.inl
        glm/gtx/fast_trigonometry.hpp
        glm/gtx/fast_trigonometry.inl
        glm/gtx/gradient_paint.hpp
        glm/gtx/gradient_paint.inl
        glm/gtx/handed_coordinate_space.hpp
        glm/gtx/handed_coordinate_space.inl
        glm/gtx/inertia.hpp
        glm/gtx/inertia.inl
        glm/gtx/int_10_10_10_2.hpp
        glm/gtx/int_10_10_10_2.inl
        glm/gtx/integer.hpp
        glm/gtx/integer.inl
        glm/gtx/intersect.hpp
        glm/gtx/intersect.inl
        glm/gtx/log_base.hpp
        glm/gtx/log_base.inl
        glm/gtx/matrix_cross_product.hpp
        glm/gtx/matrix_cross_product.inl
        glm/gtx/matrix_interpolation.hpp
        glm/gtx/matrix_interpolation.inl
        glm/gtx/matrix_major_storage.hpp
        glm/gtx/matrix_major_storage.inl
        glm/gtx/matrix_operation.hpp
        glm/gtx/matrix_operation.inl
        glm/gtx/matrix_query.hpp
        glm/gtx/matrix_query.inl
        glm/gtx/mixed_product.hpp
        glm/gtx/mixed_product.inl
        glm/gtx/multiple.hpp
        glm/gtx/multiple.inl
        glm/gtx/noise.hpp
        glm/gtx/norm.hpp
        glm/gtx/norm.inl
        glm/gtx/normal.hpp
        glm/gtx/normal.inl
        glm/gtx/normalize_dot.hpp
        glm/gtx/normalize_dot.inl
        glm/gtx/number_precision.hpp
        glm/gtx/number_precision.inl
        glm/gtx/ocl_type.hpp
        glm/gtx/ocl_type.inl
        glm/gtx/optimum_pow.hpp
        glm/gtx/optimum_pow.inl
        glm/gtx/orthonormalize.hpp
        glm/gtx/orthonormalize.inl
        glm/gtx/perpendicular.hpp
        glm/gtx/perpendicular.inl
        glm/gtx/polar_coordinates.hpp
        glm/gtx/polar_coordinates.inl
        glm/gtx/projection.hpp
        glm/gtx/projection.inl
        glm/gtx/quaternion.hpp
        glm/gtx/quaternion.inl
        glm/gtx/random.hpp
        glm/gtx/raw_data.hpp
        glm/gtx/raw_data.inl
        glm/gtx/reciprocal.hpp
        glm/gtx/rotate_vector.hpp
        glm/gtx/rotate_vector.inl
        glm/gtx/simd_mat4.hpp
        glm/gtx/simd_mat4.inl
        glm/gtx/simd_vec4.hpp
        glm/gtx/simd_vec4.inl
        glm/gtx/spline.hpp
        glm/gtx/spline.inl
        glm/gtx/std_based_type.hpp
        glm/gtx/std_based_type.inl
        glm/gtx/string_cast.hpp
        glm/gtx/string_cast.inl
        glm/gtx/transform.hpp
        glm/gtx/transform.inl
        glm/gtx/transform2.hpp
        glm/gtx/transform2.inl
        glm/gtx/ulp.hpp
        glm/gtx/unsigned_int.hpp
        glm/gtx/unsigned_int.inl
        glm/gtx/vec1.hpp
        glm/gtx/vec1.inl
        glm/gtx/vector_access.hpp
        glm/gtx/vector_access.inl
        glm/gtx/vector_angle.hpp
        glm/gtx/vector_angle.inl
        glm/gtx/vector_query.hpp
        glm/gtx/vector_query.inl
        glm/gtx/verbose_operator.hpp
        glm/gtx/verbose_operator.inl
        glm/gtx/wrap.hpp
        glm/gtx/wrap.inl
        glm/virtrev/xstream.hpp
        glm/CMakeLists.txt
        glm/ext.hpp
        glm/glm.hpp
        include/Animation.h
        include/BoundaryObject.h
        include/Camera.h
        include/Cara.h
        include/ColorMap.h
        include/ColorMapStatic.h
        include/Controller.h
        include/DataReader.h
        include/Hitable.h
        include/Lambertian.h
        include/Main.h
        include/Material.h
        include/Object.h
        include/ObjectFactory.h
        include/Plane.h
        include/Ray.h
        include/RayTracingGLU.h
        include/RayTracingPPM.h
        include/RayTracingTemps.h
        include/ReadFile.h
        include/Render.h
        include/RenderFactory.h
        include/Scene.h
        include/SceneFactory.h
        include/SceneFactoryData.h
        include/SceneFactoryVirtual.h
        include/SceneReader.h
        include/Sphere.h
        include/Texture.h
        include/TG.h
        include/Translate.h
        src/Animation.cpp
        src/BoundaryObject.cpp
        src/Camera.cpp
        src/Cara.cpp
        src/ColorMapStatic.cpp
        src/Controller.cpp
        src/DataReader.cpp
        src/Hitable.cpp
        src/Lambertian.cpp
        src/Main.cpp
        src/Material.cpp
        src/Object.cpp
        src/ObjectFactory.cpp
        src/Plane.cpp
        src/RayTracingGLU.cpp
        src/RayTracingPPM.cpp
        src/RayTracingTemps.cpp
        src/ReadFile.cpp
        src/Render.cpp
        src/RenderFactory.cpp
        src/Scene.cpp
        src/SceneFactory.cpp
        src/SceneFactoryData.cpp
        src/SceneFactoryVirtual.cpp
        src/SceneReader.cpp
        src/Sphere.cpp
        src/TG.cpp
        src/Texture.cpp
        src/Translate.cpp
        ${Res_SRC} )


# Set the GL and GLUT libraries
#mac
#set (OPENGL_LIBRARIES /opt/X11/lib/libGL.dylib)
#set (GLUT_LIBRARY /opt/X11/lib/libGLUT.dylib)


set (OPENGL_LIBRARIES /usr/lib/x86_64-linux-gnu/libGL.so)
set (GLUT_LIBRARY /usr/lib/x86_64-linux-gnu/libglut.so)

# Add the Qt5 Widgets, GL and GLUT  for linking
target_link_libraries(RayData Qt5::Widgets ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})

